--- a/css/Headers.css
+++ b/css/Headers.css
@@ -1,9 +1,14 @@
+body {
+  background-image: url('../assets/Background-gfx-Levi-Wakeford-Flickr.jpg');
+}
+
 .topnav {
   overflow: hidden;
   font-family: sans-serif;
   align-items: center;
-  background-color: #333;
+  background-color: rgba(255, 255, 255, 0);
   text-align: center;
+  color: black;
 }
 
 /* Style the topnav links */
@@ -59,4 +64,18 @@ h1 {
   padding-top: 10%;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.commandList {
+  padding-top: 10%;
+}
+
+td, th {
+  border: 1px solid rgba(245, 245, 245, 0);
+  color: rgb(255, 255, 255);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+tr:hover {
+  background-color: rgba(221, 221, 221, 0.342);
 }
